--- a/Vacation_Search.ipynb
+++ b/Vacation_Search.ipynb
@@ -648,9 +648,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n"
+     ]
+    }
+   ],
    "source": [
     "# 6a. Set parameters to search for hotels with 5000 meters.\n",
     "params = {\n",
@@ -686,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +888,7 @@
        "[217 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +916,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,9 +963,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9921129f4c1042208b198e3cb3bd10e0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 11a. Add a marker layer for each city to the map. \n",
     "locations = hotel_df[[\"Lat\", \"Lng\"]]\n",
